--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,6 @@ html, body {
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -50,4 +49,9 @@ html, body {
   padding: 20px;
   border: 1px solid #888;
   width: 20%; /* Could be more or less, depending on screen size */
+}
+
+h6 {
+  padding: 0px;
+  margin: 0px;
 }
